# RebornEasyLoginManager

./: .gitignore  Account.h  AccountDialog.cpp  AccountDialog.h  CMakeLists.txt  LanguageManager.cpp  LanguageManager.h  MainFrame.cpp  MainFrame.h  README.md  SettingsDialog.cpp  SettingsDialog.h  icon.icns  main.cpp  resources.rc  vcpkg.json
.github/workflows/: build.yml
i18n/: el.json  en.json  fr.json  os.json  pl.json  pt.json  zh.json
